[package]
name = "fut_pool"
version = "0.1.0"
authors = ["gngeorgiev <gngeorgiev.it@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.1"
futures01 = { version = "0.1" }
futures = { version = "0.3.0-alpha.16", package = "futures-preview", features = ["compat"] }
parking_lot = "0.8"
futures-timer = "0.2"
tokio-retry = "0.2"
log = "0.4"