[package]
name = "fut_pool_tcp"
version = "0.1.0"
authors = ["gngeorgiev <gngeorgiev.it@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.1"
futures01 = { version = "0.1" }
futures = { version = "0.3.0-alpha.16", package = "futures-preview", features = ["compat"] }
fut_pool = { path = "../" }
log = "0.4"
bytes = "0.4"

[dev-dependencies]
env_logger = "0.6"